Layout issue cause by padding on cta section applied border box for the overflowing width

--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@ button:nth-child(1) {
 }
 
 .call-to-action {
+  box-sizing: border-box;
   padding: 96px;
 }
 
@@ -203,7 +204,7 @@ button:nth-child(1) {
   position: relative;
 }
 
-.items {
+.square img {
   position: absolute;
   top: 0;
   left: -50px;
